tests/error/inout_errors/already_used.err
Error: Copy violation (at $FILE:17:8)
   | 
15 | def test(q: qubit @owned) -> None:
16 |     use(q)
17 |     foo(q)
   |         ^ Variable `q` with non-copyable type `qubit` cannot be
   |           borrowed ...

Note:
   | 
15 | def test(q: qubit @owned) -> None:
16 |     use(q)
   |         - Variable `q` already consumed here

Guppy compilation failed due to 1 previous error
